# ixray-1.5-stcs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ConvertLibraries.bat  Directory.Build.props  README.md  XRay.All.slnf  XRay.Dependencies.VS2013.sln  XRay.Dependencies.VS2015.sln  XRay.Dependencies.sln  XRay.Engine.VS2013.sln  XRay.Engine.VS2015.sln  XRay.Engine.sln  XRay.Engine.slnf  XRay.Plugins.VS2013.sln  XRay.Plugins.VS2015.sln  XRay.Plugins.sln  XRay.Utilities.slnf  XRay.code-workspace  XRay.sln  all_editors.dsk  download-dependencies.ps1  engine.vs2013.sln  fs.ltx  fsfactory.ltx  fsgame.ltx  generate-patch.bat  get-dependencies.ps1  libconvert.bat
.github/workflows/: build-engine.yml  building.yml
contrib/: convert-libraries.bat
gamedata/configs/: alife.ltx  default_controls.ltx  defines.ltx  engine_external.ltx  external.ltx  fonts.ltx  game_graphs.ltx  game_levels.ltx  game_levels.ltx.r30520  game_levels.ltx.r30646  game_levels_music.ltx  game_maps_mp.ltx  game_maps_single.ltx  game_story_ids.ltx  item_upgrades.ltx  rspec_default.ltx  rspec_extreme.ltx  rspec_high.ltx  rspec_low.ltx  rspec_minimum.ltx  smart_cover.ltx  system.ltx
gamedata/scripts/: _g.script  actor_menu.script  actor_proxy.script  actor_reaction.script  bind_agru_door.script  bind_anomaly_zone.script  bind_artefact.script  bind_campfire.script  bind_crow.script  bind_faction.script  bind_heli.script  bind_level_changer.script  bind_monster.script  bind_physic_object.script  bind_red_forest_bridge.script  bind_respawn.script  bind_restrictor.script  bind_signal_light.script  bind_smart_cover.script  bind_smart_terrain.script  bind_stalker.script  bloodsucker_reaction.script  cam_effector_sets.script  ce_switcher.script  class_registrator.script  cover_manager.script  db.script  death_manager.script  dialog_manager.script  dialogs.script  dialogs_agroprom.script  dialogs_darkvalley.script  dialogs_escape.script  dialogs_garbage.script  dialogs_marsh.script  dialogs_red_forest.script  dialogs_yantar.script  fx_sound.script  game_relations.script  guiders.script  (+262 more)
proj/DirectXMesh/: DirectXMesh.vcxproj.filters
proj/DirectXTex/: DirectXTex.vcxproj
res/shortcuts/: shortcuts_actor.ltx  shortcuts_level.ltx
sdk/libraries/: fmod_event.lib  fmod_eventL.lib  fmod_event_net.lib  fmod_event_netL.lib  fmodexL_lcc.lib  fmodexL_vc.lib  fmodex_lcc.lib  fmodex_vc.lib  fmodexp_lcc.lib  fmodexp_vc.lib  oalibmt.lib  oalibmtd.lib  stlport.5.0.lib
src/: all_editors.dsk  engine.sln  engine.vs2010.sln  engine.vs2013.sln
src/CustomOpenFileDialog/: CustomOpenFileDialog.csproj  CustomOpenFileDialog.sln
src/Layers/xrRenderPC_R3/: CMakeLists.txt  Light_Render_Direct_ComputeXFS.cpp  blender_bloom_build.cpp  blender_combine.cpp  blender_deffer_aref.cpp  blender_deffer_flat.cpp  blender_deffer_model.cpp  blender_light_direct.cpp  blender_light_mask.cpp  blender_light_occq.cpp  blender_light_point.cpp  blender_light_reflected.cpp  blender_ssao.cpp  light_smapvis.cpp  r2_R_lights.cpp  r2_R_sun.cpp  r2_types.h  r3.cpp  r3.h  r3_R_rain.cpp  r3_R_render.cpp  r3_loader.cpp  r3_rendertarget.cpp  r3_rendertarget.h  r3_rendertarget_accum_direct.cpp  r3_rendertarget_accum_point.cpp  r3_rendertarget_accum_spot.cpp  r3_rendertarget_draw_rain.cpp  r3_rendertarget_phase_PP.cpp  r3_rendertarget_phase_accumulator.cpp  r3_rendertarget_phase_bloom.cpp  r3_rendertarget_phase_combine.cpp  r3_rendertarget_phase_fxaa.cpp  r3_rendertarget_phase_rain.cpp  r3_rendertarget_phase_scene.cpp  r3_rendertarget_phase_smaa.cpp  r3_rendertarget_phase_smap_D.cpp  r3_rendertarget_phase_smap_S.cpp  r3_rendertarget_phase_ssao.cpp  stdafx.h  (+4 more)
src/editor/: editor.rc  editor.vcproj  editor.vcxproj  editor.vcxproj.filters  pch.hpp  property_converter_color.cpp  property_converter_vec3f.cpp  window_ide.h  window_weather_editor.cpp
src/editor_controls/: editor_controls.vcxproj  editor_controls.vcxproj.filters
src/plugins/: xrPlugins.vs2010.sln  xrPlugins.vs2013.sln
src/utils/: Shader_xrLC.h
src/xrCDB/: Frustum.h  ISpatial_verify.cpp  OPC_AABBTree.cpp  OPC_Container.cpp  OPC_Container.h  OPC_Model.cpp  OPC_OptimizedTree.cpp  OPC_PlanesCollider.cpp  OPC_TreeBuilders.cpp  OPC_TriBoxOverlap.h  OPC_TriTriOverlap.h  Opcode.h  StdAfx.cpp  StdAfx.h  xrCDB.cpp  xrCDB.h  xrCDB.vcproj  xrCDB.vcxproj  xrCDB.vcxproj.filters  xrCDB_Collector.cpp  xrCDB_frustum.cpp  xrCDB_ray.cpp  xr_area.cpp  xr_collide_defs.h
src/xrCPU_Pipe/: 3DNow!Lib.cpp  StdAfx.h  xrCPU_Pipe.cpp  xrCPU_Pipe.vcxproj  xrCPU_Pipe.vcxproj.filters
src/xrCore/: CMakeLists.txt  (+83 more)
src/xrGameSpy/: CMakeLists.txt  xrGameSpy.cpp  xrGameSpy.h  xrGameSpy.vcproj  xrGameSpy.vcxproj  xrGameSpy.vcxproj.filters  xrGameSpy_Available.cpp  xrGameSpy_Available.h  xrGameSpy_CDKey.cpp  xrGameSpy_CDKey.h  xrGameSpy_HTTP.cpp  xrGameSpy_HTTP.h  xrGameSpy_MainDefs.h  xrGameSpy_Patching.cpp  xrGameSpy_Patching.h  xrGameSpy_QR2.cpp  xrGameSpy_QR2.h  xrGameSpy_ServerBrowser.cpp  xrGameSpy_ServerBrowser.h
src/xrGameSpy/gamespy/: darray.c  md5c.c  nonport.h
src/xrGameSpy/gamespy/cdkey/: gcdkeyc.c  gcdkeyc.h  gcdkeys.c  gcdkeys.h
src/xrGameSpy/gamespy/common/: gsAssert.c  gsAssert.h  gsAvailable.c  gsCommon.h  gsCrypt.c  gsCrypt.h  gsDebug.c  gsDebug.h  gsLargeInt.c  gsLargeInt.h  gsMemory.c  gsPlatform.c  gsPlatform.h  gsPlatformSocket.c  gsPlatformSocket.h  gsPlatformThread.c  gsPlatformThread.h  gsPlatformUtil.c  gsPlatformUtil.h  gsStringUtil.c  gsStringUtil.h  gsXML.c  gsXML.h
src/xrGameSpy/gamespy/common/win32/: Win32Common.c  gsThreadWin32.c
src/xrGameSpy/gamespy/ghttp/: ghttp.h  ghttpASCII.h  ghttpBuffer.c  ghttpBuffer.h  ghttpCallbacks.c  ghttpCallbacks.h  ghttpCommon.c  ghttpCommon.h  ghttpConnection.c  ghttpConnection.h  ghttpEncryption.c  ghttpEncryption.h  ghttpMain.c  ghttpMain.h  ghttpPost.c  ghttpPost.h  ghttpProcess.c  ghttpProcess.h
src/xrGameSpy/gamespy/patching/: pt.h  ptMain.c
src/xrGameSpy/gamespy/qr2/: qr2.c  qr2.h  qr2regkeys.c  qr2regkeys.h
src/xrGameSpy/gamespy/serverbrowsing/: sb_ascii.h  sb_internal.h  sb_queryengine.c  sb_server.c  sb_serverbrowsing.c  sb_serverbrowsing.h  sb_serverlist.c
(+4573 files in other folders)
